# Hydrangea

./: .gitignore  Agents.md  Architecture.md  Home.md  Hydrangea-ctl.py  Hydrangea-server.py  README.md  client.py  common.py  flake.nix  pyproject.toml  server.py  serverctl.py
.github/workflows/: ci_cd.yaml
client/go/: go.mod  go.sum  main.go  revshell_unix.go  revshell_windows.go
client/py/: client.py
nix/: mkClient.nix  mkPythonApp.nix
server/: Hydrangea-ctl.py  Hydrangea-server.py  UI.py  common.py  ctl.py  go_builder.py  requirements.txt  server.py
server/utils/: common.py  controller_ui.py  go_builder.py
server_functions/: wire.py
