[tool.poetry]
name = "hydrangea"
version = "3.2.0"
description = "Hydrangea C2 framework"
authors = []
readme = "README.md"
packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = "^3.10"
rich           = ">=13.0"
prompt_toolkit = ">=3.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0"

[tool.poetry.scripts]
hydrangea-server = "server.server:main"
hydrangea-ctl    = "server.ctl:main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes, I = isort, UP = pyupgrade
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # line too long — ASCII art in server.py exceeds any reasonable limit
]
